--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,7 @@
     <div class="main-content">
         {{>header}}
         <p>{{title}}</p>
+        <p>This site was created by {{name}}</p>
         <p>Use this site to get you weater!</p>
 
         <img class="portrait" src="/img/what.jpg">
